// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Bounds > Properly generates documentation for modules which contain bounds > # Of Files Generated 1`] = `9`;

exports[`Bounds > Properly generates documentation for modules which contain bounds > msdocs/priorscriptapi/TOC.yml 1`] = `
"  - name: bounds-module 1.x.x
    items:
    - name: bounds-module 1.x.x
      href: bounds-module-1xx/bounds-module.md
    - name: ClassWithBounds
      href: bounds-module-1xx/ClassWithBounds.md
"
`;

exports[`Bounds > Properly generates documentation for modules which contain bounds > msdocs/priorscriptapi/bounds-module-1xx/ClassWithBounds.md 1`] = `
"---
# DO NOT TOUCH — This file was automatically generated by @minecraft/api-docs-generator, to report problems file an issue at https://github.com/Mojang/minecraft-scripting-libraries
author: jakeshirley
ms.author: jashir
ms.service: minecraft-bedrock-edition
ms.date: 02/10/2025
title: bounds-module-1xx.ClassWithBounds Class
description: Contents of the bounds-module.ClassWithBounds class (Version 1.x.x).
---
# ClassWithBounds Class (Version 1.x.x)

> [!IMPORTANT]
> This documentation is for an older version of this module. Go to the latest documentation [*here*](../../../scriptapi/bounds-module/ClassWithBounds.md).

## Properties

### **w**
\`w: number;\`

Type: *number*

Notes:
  - This property can't be used in read-only mode.

### **x**
\`x: number;\`

Type: *number*

Notes:
  - This property has a minimum bound of \`1\`
  - This property can't be used in read-only mode.

### **y**
\`y: number;\`

Type: *number*

Notes:
  - This property has a maximum bound of \`255\`
  - This property can't be used in read-only mode.

### **z**
\`z: number;\`

Type: *number*

Notes:
  - This property has a minimum bound of \`1\`
  - This property has a maximum bound of \`255\`
  - This property can't be used in read-only mode.

## Methods
- [methodThatTakesBoundedValue](#methodthattakesboundedvalue)

### **methodThatTakesBoundedValue**
\`
methodThatTakesBoundedValue(w: number, x: number, y: number, z: number): void
\`

#### **Parameters**
- **w**: *number*
  Minimum Bound: \`1\`
  Maximum Bound: \`255\`
- **x**: *number*
  Minimum Bound: \`1\`
- **y**: *number*
  Maximum Bound: \`255\`
- **z**: *number*

**Returns** *void*
  
Notes:
- This function can't be called in read-only mode.
"
`;

exports[`Bounds > Properly generates documentation for modules which contain bounds > msdocs/priorscriptapi/bounds-module-1xx/bounds-module.md 1`] = `
"---
# DO NOT TOUCH — This file was automatically generated by @minecraft/api-docs-generator, to report problems file an issue at https://github.com/Mojang/minecraft-scripting-libraries
author: jakeshirley
ms.author: jashir
ms.service: minecraft-bedrock-edition
ms.date: 02/10/2025
title: bounds-module-1xx Module
description: Contents of the bounds-module module (Version 1.x.x)
---
# \`bounds-module\` Module (Version 1.x.x)

> [!IMPORTANT]
> This documentation is for an older version of this module. Go to the latest documentation [*here*](../../../scriptapi/bounds-module/bounds-module.md).

## Manifest Details
\`\`\`json
{
    "module_name": "bounds-module",
    "version": "1.0.0"
}
\`\`\`

## Available Versions
- \`1.0.0\`

## Classes
- [ClassWithBounds](ClassWithBounds.md)
"
`;

exports[`Bounds > Properly generates documentation for modules which contain bounds > msdocs/scriptapi/TOC.yml 1`] = `
"  - name: bounds-module
    items:
    - name: bounds-module
      href: bounds-module/bounds-module.md
    - name: bounds-module Changelog
      href: bounds-module/changelog.md
    - name: ClassWithBounds
      href: bounds-module/ClassWithBounds.md
"
`;

exports[`Bounds > Properly generates documentation for modules which contain bounds > msdocs/scriptapi/bounds-module/ClassWithBounds.md 1`] = `
"---
# DO NOT TOUCH — This file was automatically generated by @minecraft/api-docs-generator, to report problems file an issue at https://github.com/Mojang/minecraft-scripting-libraries
author: jakeshirley
ms.author: jashir
ms.service: minecraft-bedrock-edition
ms.date: 02/10/2025
title: bounds-module.ClassWithBounds Class
description: Contents of the bounds-module.ClassWithBounds class.
---
# ClassWithBounds Class

## Properties

### **w**
\`w: number;\`

Type: *number*

Notes:
  - This property has a minimum bound of \`1\`
  - This property has a maximum bound of \`255\`
  - This property can't be used in read-only mode.

### **x**
\`x: number;\`

Type: *number*

Notes:
  - This property has a maximum bound of \`255\`
  - This property can't be used in read-only mode.

### **y**
\`y: number;\`

Type: *number*

Notes:
  - This property has a minimum bound of \`1\`
  - This property can't be used in read-only mode.

### **z**
\`z: number;\`

Type: *number*

Notes:
  - This property can't be used in read-only mode.

## Methods
- [methodThatTakesBoundedValue](#methodthattakesboundedvalue)

### **methodThatTakesBoundedValue**
\`
methodThatTakesBoundedValue(w: number, x: number, y: number, z: number): void
\`

#### **Parameters**
- **w**: *number*
- **x**: *number*
  Maximum Bound: \`255\`
- **y**: *number*
  Minimum Bound: \`1\`
- **z**: *number*
  Minimum Bound: \`1\`
  Maximum Bound: \`255\`

**Returns** *void*
  
Notes:
- This function can't be called in read-only mode.
"
`;

exports[`Bounds > Properly generates documentation for modules which contain bounds > msdocs/scriptapi/bounds-module/bounds-module.md 1`] = `
"---
# DO NOT TOUCH — This file was automatically generated by @minecraft/api-docs-generator, to report problems file an issue at https://github.com/Mojang/minecraft-scripting-libraries
author: jakeshirley
ms.author: jashir
ms.service: minecraft-bedrock-edition
ms.date: 02/10/2025
title: bounds-module Module
description: Contents of the bounds-module module
---
# \`bounds-module\` Module

## [Changelog](changelog.md)

## Manifest Details
\`\`\`json
{
    "module_name": "bounds-module",
    "version": "2.0.0"
}
\`\`\`
This is version 2.x.x of this module, which is the latest as of version 1.0.0 of Minecraft.

## Available Versions
- \`2.0.0\`

### Prior Versions

The following API versions are from a major version that is documented here: [*bounds-module*](../../../priorscriptapi/bounds-module-1xx/bounds-module.md):
- \`1.0.0\`


## Classes
- [ClassWithBounds](ClassWithBounds.md)
"
`;

exports[`Bounds > Properly generates documentation for modules which contain bounds > msdocs/scriptapi/bounds-module/changelog.md 1`] = `
"---
# DO NOT TOUCH — This file was automatically generated by @minecraft/api-docs-generator, to report problems file an issue at https://github.com/Mojang/minecraft-scripting-libraries
author: jakeshirley
ms.author: jashir
ms.service: minecraft-bedrock-edition
ms.date: 02/10/2025
title: bounds-module Changelog
description: Changelog of the \`bounds-module\` module
---
# \`bounds-module\` Changelog

## Version Changes
- [2.0.0](#200)
- [1.0.0](#100)

## 2.0.0
#### Changed *[\`ClassWithBounds\`](ClassWithBounds.md)*
- Changed has_min flag from \`false\` to \`true\` for *[\`w\`](ClassWithBounds.md#w)*   
- Added min_value \`1\` for *[\`w\`](ClassWithBounds.md#w)* 
- Changed has_max flag from \`false\` to \`true\` for *[\`w\`](ClassWithBounds.md#w)*   
- Added max_value \`255\` for *[\`w\`](ClassWithBounds.md#w)* 
- Changed has_min flag from \`true\` to \`false\` for *[\`x\`](ClassWithBounds.md#x)*   
- Removed min_value for *[\`x\`](ClassWithBounds.md#x)*
- Changed has_max flag from \`false\` to \`true\` for *[\`x\`](ClassWithBounds.md#x)*   
- Added max_value \`255\` for *[\`x\`](ClassWithBounds.md#x)* 
- Changed has_min flag from \`false\` to \`true\` for *[\`y\`](ClassWithBounds.md#y)*   
- Added min_value \`1\` for *[\`y\`](ClassWithBounds.md#y)* 
- Changed has_max flag from \`true\` to \`false\` for *[\`y\`](ClassWithBounds.md#y)*   
- Removed max_value for *[\`y\`](ClassWithBounds.md#y)*
- Changed has_min flag from \`true\` to \`false\` for *[\`z\`](ClassWithBounds.md#z)*   
- Removed min_value for *[\`z\`](ClassWithBounds.md#z)*
- Changed has_max flag from \`true\` to \`false\` for *[\`z\`](ClassWithBounds.md#z)*   
- Removed max_value for *[\`z\`](ClassWithBounds.md#z)*
- Changed function *[\`methodThatTakesBoundedValue\`](ClassWithBounds.md#methodthattakesboundedvalue)*
  - Changed details of argument \`w\`
  from:
    - Minimum Bound: 1
    - Maximum Bound: 255
  to:
    - Minimum Bound: None
    - Maximum Bound: None
  - Changed details of argument \`x\`
  from:
    - Minimum Bound: 1
    - Maximum Bound: None
  to:
    - Minimum Bound: None
    - Maximum Bound: 255
  - Changed details of argument \`y\`
  from:
   - Minimum Bound: None
    - Maximum Bound: 255
  to:
    - Minimum Bound: 1
    - Maximum Bound: None
  - Changed details of argument \`z\`
  from:
   - Minimum Bound: None
    - Maximum Bound: None
  to:
    - Minimum Bound: 1
    - Maximum Bound: 255
## 1.0.0
#### Added \`bounds-module\` Module
"
`;

exports[`Bounds > Properly generates documentation for modules which contain bounds > typescript/bounds-module@1.0.0.d.ts 1`] = `
"// Type definitions for Minecraft Bedrock Edition script APIs
// Project: https://docs.microsoft.com/minecraft/creator/
// Definitions by: Jake Shirley <https://github.com/JakeShirley>
//                 Mike Ammerlaan <https://github.com/mammerla>

/* *****************************************************************************
   Copyright (c) Microsoft Corporation.
   ***************************************************************************** */
/**
 * @packageDocumentation
 *
 * Manifest Details
 * \`\`\`json
 * {
 *   "module_name": "bounds-module",
 *   "version": "1.0.0"
 * }
 * \`\`\`
 *
 */
export class ClassWithBounds {
    private constructor();
    /**
     * @remarks
     * This property can't be used in read-only mode.
     *
     */
    w: number;
    /**
     * @remarks
     * This property can't be used in read-only mode.
     *
     * Minimum Value: 1
     *
     */
    x: number;
    /**
     * @remarks
     * This property can't be used in read-only mode.
     *
     * Maximum Value: 255
     *
     */
    y: number;
    /**
     * @remarks
     * This property can't be used in read-only mode.
     *
     * Minimum Value: 1
     *
     * Maximum Value: 255
     *
     */
    z: number;
    /**
     * @remarks
     * This function can't be called in read-only mode.
     *
     * @param w
     * Minimum value: 1
     * Maximum value: 255
     * @param x
     * Minimum value: 1
     * @param y
     * Maximum value: 255
     * @param z
     */
    methodThatTakesBoundedValue(w: number, x: number, y: number, z: number): void;
}
"
`;

exports[`Bounds > Properly generates documentation for modules which contain bounds > typescript/bounds-module@2.0.0.d.ts 1`] = `
"// Type definitions for Minecraft Bedrock Edition script APIs
// Project: https://docs.microsoft.com/minecraft/creator/
// Definitions by: Jake Shirley <https://github.com/JakeShirley>
//                 Mike Ammerlaan <https://github.com/mammerla>

/* *****************************************************************************
   Copyright (c) Microsoft Corporation.
   ***************************************************************************** */
/**
 * @packageDocumentation
 *
 * Manifest Details
 * \`\`\`json
 * {
 *   "module_name": "bounds-module",
 *   "version": "2.0.0"
 * }
 * \`\`\`
 *
 */
export class ClassWithBounds {
    private constructor();
    /**
     * @remarks
     * This property can't be used in read-only mode.
     *
     * Minimum Value: 1
     *
     * Maximum Value: 255
     *
     */
    w: number;
    /**
     * @remarks
     * This property can't be used in read-only mode.
     *
     * Maximum Value: 255
     *
     */
    x: number;
    /**
     * @remarks
     * This property can't be used in read-only mode.
     *
     * Minimum Value: 1
     *
     */
    y: number;
    /**
     * @remarks
     * This property can't be used in read-only mode.
     *
     */
    z: number;
    /**
     * @remarks
     * This function can't be called in read-only mode.
     *
     * @param w
     * @param x
     * Maximum value: 255
     * @param y
     * Minimum value: 1
     * @param z
     * Minimum value: 1
     * Maximum value: 255
     */
    methodThatTakesBoundedValue(w: number, x: number, y: number, z: number): void;
}
"
`;
